# risc-v-simulator

./: .gitignore  CMakeLists.txt  README.md  REPORT.md  main.cpp  rv32.asm
.github/workflows/: ci.yaml
libraries/: CMakeLists.txt
libraries/argparser/: ArgParser.cpp  ArgParser.hpp  Argument.hpp  ArgumentBuilder.hpp  CMakeLists.txt  ConcreteArgument.hpp  ConcreteArgument.inl  ConcreteArgumentBuilder.hpp
libraries/argparser/basic/: BasicFunctions.cpp  BasicFunctions.hpp  CMakeLists.txt  ConditionalOutput.hpp
libraries/argparser/docs/: ArgParser.md  ConcreteArgumentBuilder.md  README.md
libraries/argparser/docs/dev/: architecture.md  problem.md  requirements.md
libraries/asm-riscv/: CMakeLists.txt  ProcessMemory.cpp  ProcessMemory.hpp  RISCVAssemblerCommand.cpp  RISCVAssemblerCommand.hpp  RISCVAssemblerReader.cpp  RISCVAssemblerReader.hpp  RISCVAssemblerToBinary.cpp  RISCVAssemblerToBinary.hpp  RISCVComandExecutor.cpp  RISCVComandExecutor.hpp  RISCVCommandExecutor.cpp  RISCVCommandExecutor.hpp  RISCVRegisters.cpp  RISCVRegisters.hpp
libraries/cache/: BitpLRUPolicy.cpp  BitpLRUPolicy.hpp  CMakeLists.txt  Cache.cpp  Cache.hpp  LRUPolicy.cpp  LRUPolicy.hpp  common_functions.hpp  constants.hpp
template_dont_edit/: REPORT.md
